Updated the code to aid readability